# gwtf

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
docs/: api.rst  conf.py  index.rst
docs/source/: conf.py
examples/: example_01.ipynb
gwtf/: __init__.py  core.py  mcr.py  model.py  version.py
tests/: conftest.py  test_core.py  test_mcr.py  test_model.py  test_version.py
wtf_py/: __init__.py  core.py  mcr.py  model.py  rises.py  version.py
